--- a/brands/arca-vindi.html
+++ b/brands/arca-vindi.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Group Website</title>
-    <link rel="stylesheet" href="/index.css">
-    <script src="scripts/index.js"></script>
+    <link rel="stylesheet" href="/css/index.css">
+    <script src="/scripts/index.js"></script>
 </head>
 
 <body class="loaded brand">
