--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@
                     <p>We are a group of brands that are all about sustainability and innovation.</p>
                 </div>
                 <div class="brand-item arcavindi">
-                    <img src="/images/arcavindi-logo.svg" alt="Arcavindi">
-                    <a href="/brands/arca-vindi.html">
+                    <img src="images/arcavindi-logo.svg" alt="Arcavindi">
+                    <a href="brands/arca-vindi.html">
                         <div class="brand-text">
                             <h3>Arca Vindi</h3>
                             <p>Description goes here</p>
@@ -555,8 +555,8 @@
                     </a>
                 </div>
                 <div class="brand-item vcc">
-                    <img src="/images/vcc.webp" alt="Vintage Cash Cow">
-                    <a href="/brands/vcc">
+                    <img src="images/vcc.webp" alt="Vintage Cash Cow">
+                    <a href="brands/vcc">
                         <div class="brand-text">
                             <h3>Vintage Cash Cow</h3>
                             <p>Description goes here</p>
@@ -564,8 +564,8 @@
                     </a>
                 </div>
                 <div class="brand-item vintage-honey-pots">
-                    <img src="/images/vintage-honey-pots.webp" alt="Arcavindi">
-                    <a href="/brands/vintage-honey-pots">
+                    <img src="images/vintage-honey-pots.webp" alt="Arcavindi">
+                    <a href="brands/vintage-honey-pots">
                         <div class="brand-text">
                             <h3>Vintage Honey Pots</h3>
                             <p>Description goes here</p>
@@ -574,7 +574,7 @@
                 </div>
                 <div class="brand-item luxoris">
                     <p>Luxoris</p>
-                    <a href="/brands/arcavindi">
+                    <a href="brands/arcavindi">
                         <div class="brand-text">
                             <h3>Luxoris</h3>
                             <p>Description goes here</p>
