--- a/brands/arca-vindi.html
+++ b/brands/arca-vindi.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Group Website</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/scripts/index.js"></script>
+    <link rel="stylesheet" href="../css/index.css">
+    <!-- <script src="scripts/index.js"></script> -->
 </head>
 
 <body class="loaded brand">
@@ -24,7 +24,7 @@
             <div class="tab">
                 <div class="button">
                     <div class="button-icon">
-                        <img src="/images/menu-2-bar.png" alt="menu" class="menu" />
+                        <img src="../images/menu-2-bar.png" alt="menu" class="menu" />
                     </div>
                     <svg width="168" height="33" viewBox="0 0 168 33" fill="none" class="MenuButtonClip_svg__1d0Mk">
                         <clipPath id="menuButtonClip">
@@ -42,7 +42,7 @@
     </div>
     <main>
         <section class="banner">
-            <img src="/images/arca-vindi-banner.webp" alt="Arca Vindi Banner" class="banner-image">
+            <img src="../images/arca-vindi-banner.webp" alt="Arca Vindi Banner" class="banner-image">
         </section>
         <section class="brand-overview">
             <div class="two-column-grid">
@@ -70,7 +70,7 @@
         <section class="brand-details">
             <div class="two-column-grid">
                 <div class="brand-item arcavindi single-cell-row">
-                    <img src="/images/arcavindi-logo.svg" alt="Arcavindi">
+                    <img src="../images/arcavindi-logo.svg" alt="Arcavindi">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -80,16 +80,16 @@
                         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
                 <div class="brand-item vcc">
-                    <img src="/images/arca-vindi-1.png" alt="Vintage Cash Cow">
+                    <img src="../images/arca-vindi-1.png" alt="Vintage Cash Cow">
                 </div>
                 <div class="brand-item arcavindi single-cell-row" style="background-color: rgb(180, 26, 235);">
-                    <img src="/images/arcavindi-white-logo.svg" alt="Arcavindi">
+                    <img src="../images/arcavindi-white-logo.svg" alt="Arcavindi">
                 </div>
                 <div class="brand-item vcc">
-                    <img src="/images/vcc.webp" alt="Vintage Cash Cow">
+                    <img src="../images/vcc.webp" alt="Vintage Cash Cow">
                 </div>
                 <div class="brand-item vcc">
-                    <img src="/images/vcc.webp" alt="Vintage Cash Cow">
+                    <img src="../images/vcc.webp" alt="Vintage Cash Cow">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -99,7 +99,7 @@
                         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
                 <div class="brand-item vcc">
-                    <img src="/images/vcc.webp" alt="Vintage Cash Cow">
+                    <img src="../images/vcc.webp" alt="Vintage Cash Cow">
                 </div>
             </div>
         </section>
